# radar-webscrapping

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DESENVOLVIMENTO_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCS_INDEX.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/: CONTEXT.md  README.md  README_STRUCTURE.md  dependabot.yml
.github/workflows/: ci-cd.yml  ci-simple.yml  cleanup.yml  dependencies.yml  release.yml
docs/: CICD_GUIDE.md  CONCEITOS.md  DESENVOLVIMENTO_GUIDE.md  DEVELOPMENT_GUIDE.md  DEV_WORKFLOW.md  DOCKER.md  DOCS_INDEX.md  INSTALACAO.md  RADAR_INFRA_INTEGRATION.md
scripts/: docker-entrypoint.sh
src/: main.py
src/application/dtos/: DataTransferObjects.py
src/application/interfaces/: IComponenteCurricularRepository.py  ICursoRepository.py  IEstruturaCurricularRepository.py  IRadarApiClient.py  IScrapingService.py
src/application/use_cases/: OrquestrarScrapingCompletoUseCase.py  ScrapearComponentesUseCase.py  ScrapearCursosUseCase.py  ScrapearEstruturasCurricularesUseCase.py  __init__.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/entities/: ComponenteCurricular.py  Curso.py  EstruturaCurricular.py  __init__.py
src/domain/exceptions/: RadarExceptions.py  __init__.py
src/domain/value_objects/: ValueObjects.py  __init__.py
src/infrastructure/api_clients/: RadarApiClient.py
src/infrastructure/repositories/: SqlAlchemyCursoRepository.py  database.py
src/infrastructure/repositories/models/: CursoModel.py  __init__.py
src/infrastructure/scrapers/: SigaaUfbaCursoScraper.py
src/interfaces/cli/: CursoController.py
src/models/: __init__.py  scraped_data.py
src/scrapers/: __init__.py  base_scraper.py  course_scraper.py  schedule_scraper.py  syllabus_scraper.py
src/services/: __init__.py  api_client.py  pdf_processor.py
src/shared/: __init__.py  logging.py
src/utils/: __init__.py  browser_manager.py  data_validator.py
